@@ -50,6 +50,7 @@
  * @copyright  2006 Benoit Grégoire, Technologies Coeus inc.
  */
 class ShoutBox extends Content {
+    const DEFAULT_MAX_SHOUT_CHARS=80;
     /**
      * Constructor
      *
@@ -97,8 +98,90 @@ class ShoutBox extends Content {
     	return true;
     }
 
+    /**
+     * Set the number of items to be displayed by the shoutbox
+     * @param $numItems integer >= 0 The maximum number characters.  0 means no limit
+     * @return the value, AFTER it was set (so the previous value if the value was invalid)
+     */
+    protected function setMaxShoutChars($numChars)
+    {
+        $numChars = (int)$numChars;
+        if($numChars >= 0) {
+            $retval = $this->setKVP(get_class($this) . '_max_shout_chars', $numChars);
+        }
+        else {
+            //We gave an invalide value
+            $retval = $this->getMaxShoutChars();
+        }
+        return $retval;
+    }
+    
+    /**
+     * Returns the maximum number of character one can shout.  0 means no limit.
+     *
+     * @return integer number of items to display
+     */
+    protected function getMaxShoutChars()
+    {
+        return $this->getKVP(get_class($this) . '_max_shout_chars');
+    }
+
+    /**
+     * Set the number of items to be displayed by the shoutbox
+     * @param $numItems integer >= 0 The number of items to display.   0 means no limit
+     *
+     * @return the value, AFTER it was set (so the previous value if the value was invalid)
+     */
+    protected function setDisplayNumItems($numItems)
+    {
+        $numItems = (int)$numItems;
+        if($numItems >= 0) {
+            $retval = $this->setKVP(get_class($this) . '_display_num_items', $numItems);
+        }
+        else {
+            //We gave an invalide value
+            $retval = $this->getDisplayNumItems();
+        }
+        return $retval;
+    }
+
+    /**
+     * Returns the number of items to be displayed by the shoutbox
+     *
+     * @return integer number of items to display
+     */
+    protected function getDisplayNumItems()
+    {
+        $displayNumItems = $this->getKVP(get_class($this) . '_display_num_items');
+        if(empty($displayNumItems)) {
+            $displayNumItems = 5;
+        }
+        return $displayNumItems;
+    }
+    
     public function getAdminUI($subclass_admin_interface = null, $title = null) {
     	$html = null;
+
+    	/*display_num_items*/
+    	$displayNumItems = $this->getDisplayNumItems();
+    	$html .= "<li class='admin_element_item_container'>\n";
+    	$html .= "<div class='admin_element_label'>" . ("Number of shouts to display in the list (0 means no limit)") . ": </div>\n";
+    	$html .= "<div class='admin_element_data'>\n";
+    	$name = "banner_add_group_{this->getId()}_display_num_items";
+    	$html .= "<input type='text' size='6' value='$displayNumItems' name='$name'>\n";
+    	$html .= "</div>\n";
+    	$html .= "</li>\n";
+
+    	/*max_shout_chars*/
+    	$maxShoutChars = $this->getMaxShoutChars();
+    	$html .= "<li class='admin_element_item_container'>\n";
+    	$html .= "<div class='admin_element_label'>" . ("Maximum number of characters for each shouts (0 means no limit)") . ": </div>\n";
+    	$html .= "<div class='admin_element_data'>\n";
+    	$name = "banner_add_group_{this->getId()}_max_num_chars";
+    	$html .= "<input type='text' size='6' value='$maxShoutChars' name='$name'>\n";
+    	$html .= "</div>\n";
+    	$html .= "</li>\n";
+    	 
     	/* OnclickContent */
     	$criteria_array = array (
     	array ('isTextualContent'),
@@ -124,7 +207,8 @@ class ShoutBox extends Content {
     		$name = "shoutbox_" . $this->id . "_onclick_content_erase";
     		$html .= "<input type='submit' class='submit' name='$name' value='" . sprintf(_("Delete %s (%s)"), _("onclick parameter"), get_class($content)) . "'>";
 
-    	}    	    		$html .= "</div>\n";
+    	}    	    		
+    	$html .= "</div>\n";
     	$html .= "</li>\n";
     	return parent :: getAdminUI($html, $title);
     }
@@ -138,6 +222,15 @@ class ShoutBox extends Content {
     	$db=AbstractDb::getObject();
     	if ($this->isOwner(User :: getCurrentUser()) || User :: getCurrentUser()->isSuperAdmin()) {
     		parent :: processAdminUI();
+    		
+    		/*display_num_items*/
+    		$name = "banner_add_group_{this->getId()}_display_num_items";
+    		$this->setDisplayNumItems($_REQUEST[$name]);
+
+    		/*max_shout_chars*/
+    		$name = "banner_add_group_{this->getId()}_max_num_chars";
+    		$this->setMaxShoutChars($_REQUEST[$name]);
+
     		/* OnclickContent */
     		$content = $this->getOnClickContent();
     		if (!$content) {
@@ -160,43 +253,25 @@ class ShoutBox extends Content {
        /** Retreives the user interface of this object.  Anything that overrides this method should call the parent method with it's output at the END of processing.
       * @return The HTML fragment for this interface */
        public function getUserUI() {
-        $html = '';
-        $html_main = '';
-
-        $db = AbstractDb::getObject();
-        $node = Node::getCurrentNode();
-        if($node) {
-        	$node_id = $db->escapeString($node->getId());
-        	$sql = "SELECT *, EXTRACT(EPOCH FROM creation_date) as creation_date_php FROM content_shoutbox_messages WHERE origin_node_id='$node_id' ORDER BY creation_date DESC LIMIT 5\n";
-        	$db->execSql($sql, $rows, false);
-        	if($rows) {
-        		$html_main .= "<em>"._("Last five messages:")."</em>";
-        		$html_main .= "<ul>";
-        		foreach ($rows as $row) {
-        			$user = User::getObject($row['author_user_id']);
-        			$content = Content::getObject($row['message_content_id']);
-        			$html_main .= "<li>";
-        			$html_main .= $user->getListUI()."\n";
-        			$html_main .= "<span class='date'>".strftime('%x', $row['creation_date_php'])."</span>\n";
-        			$html_main .= "<div class='message'>".$content->getListUI()."</div>\n";
-        			$html_main .= "</li>";
-        		}
-        		$html_main .= "</ul>";
-        	}
-        }
-        else
-        {
-        	$html_main .= "<p>"._("Sorry, I am unable to determine your current node")."</p>\n";
-        }
-
         $real_node = Node::getCurrentRealNode();
-        //$real_node = Node::getCurrentNode();//For testing
+        $real_node = Node::getCurrentNode();//For testing
+        $node = Node::getCurrentNode();
+        $formHtml = null;
         if($real_node) {
-        	$html .= "<form action='".BASE_URL_PATH."content/ShoutBox/add_message.php'>\n";
-        	$html .= "<input type='hidden' name='shoutbox_id' value='".$this->getId()."'/>\n";
+        	$formHtml .= "<form action='".BASE_URL_PATH."content/ShoutBox/add_message.php'>\n";
+        	$formHtml .= "<input type='hidden' name='shoutbox_id' value='".$this->getId()."'/>\n";
         	//$html .= "destination_url: ";pretty_print_r($_SERVER);
-        	$html .= "<input type='hidden' name='node_id' size='40' value='".$node->getId()."'/>\n";
-        	$html .= "<input type='text' name='shout_text' id='shout_text' size='40' value=''/>\n";
+        	$maxShoutChars = $this->getMaxShoutChars();
+        	if($maxShoutChars>0) {
+        	    $max_size = "maxlength='$maxShoutChars'";
+        	    $maxShoutChars<=self::DEFAULT_MAX_SHOUT_CHARS?$size="size='$maxShoutChars'":$size="size='".self::DEFAULT_MAX_SHOUT_CHARS."'";
+        	}
+        	else {
+        	    $max_size = null;
+        	    $size = "size='".self::DEFAULT_MAX_SHOUT_CHARS."'";
+        	}
+        	$formHtml .= "<input type='hidden' name='node_id' value='".$node->getId()."'/>\n";
+        	$formHtml .= "<input type='text' name='shout_text' id='shout_text' $size $max_size value=''/>\n";
         	$onclick_content = $this->getOnClickContent();
         	if($onclick_content){
         		$onclick="onclick=\"".$onclick_content->getString()."\"";
@@ -204,16 +279,53 @@ class ShoutBox extends Content {
         	{
         		$onclick = null;
         	}
-        	$html .= "<input type='submit' name='shout_submit' $onclick value='"._("Shout!")."'>\n";
-        	$html .= "</form>\n";
+        	$formHtml .= "<input type='submit' name='shout_submit' $onclick value='"._("Shout!")."'>\n";
+        	$formHtml .= "</form>\n";
         }
         else
         {
-        	$html .= "<p>"._("Sorry, you must be at a hotspot to use the shoutbox")."</p>\n";
+            $formHtml .= "<p>"._("Sorry, you must be at a hotspot to use the shoutbox")."</p>\n";
         }
 
+        $html_main = '';
+        $displayNumItems = $this->getDisplayNumItems();
+        $db = AbstractDb::getObject();
+
+        if($node) {
+            $node_id = $db->escapeString($node->getId());
+            if($displayNumItems>0) {
+                $limit = "LIMIT $displayNumItems";
+                $heading = "<em>".sprintf(_("Last %d messages:"), $displayNumItems)."</em>";
+            }
+            else {
+                $limit = null;
+                $heading = null;
+            }
+            $sql = "SELECT *, EXTRACT(EPOCH FROM creation_date) as creation_date_php FROM content_shoutbox_messages WHERE origin_node_id='$node_id' ORDER BY creation_date DESC $limit\n";
+            $db->execSql($sql, $rows, false);
+            if($rows) {
+                //$html_main .= $heading;
+                $html_main .= "<ul>";
+                $html_main .= "<li>$formHtml</li>";
+                foreach ($rows as $row) {
+                    $user = User::getObject($row['author_user_id']);
+                    $content = Content::getObject($row['message_content_id']);
+                    $html_main .= "<li>";
+                    $html_main .= $user->getListUI()."\n";
+                    $html_main .= "<span class='date'>".strftime('%x', $row['creation_date_php'])."</span>\n";
+                    $html_main .= "<div class='message'>".$content->getListUI()."</div>\n";
+                    $html_main .= "</li>";
+                }
+                $html_main .= "</ul>";
+            }
+        }
+        else
+        {
+            $html_main .= "<p>"._("Sorry, I am unable to determine your current node")."</p>\n";
+        }
+        
         $this->setUserUIMainDisplayContent($html_main);
-        $this->setUserUIMainInteractionArea($html);
+        //$this->setUserUIMainInteractionArea($formHtml);
         return Content :: getUserUI();
        }
 
